--- a/index.html
+++ b/index.html
@@ -1,236 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pagina</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<title>Compra de juegos</title>
+	<link rel="stylesheet" type="text/css" href="estilos.css">
+	<link rel="stylesheet" type="text/css" href="java/javascript.js">
 </head>
 <body>
-
-<audio id="miAudio" autoplay="">
-            <source src="bienvenidos2.mp3" type="audio/mp3">
-        </audio>
-
-	<header class="header">
-
-		<div class="menu container">
-			<a href="#" class="logo">JUEGOS DC</a>
-			<input type="checkbox" id="menu">
-			<label for="menu">
-				<img src="img/menu.png" class="menu-icono" alt="menu">
-			</label>
-			<nav class="navbar">
-				<ul>
-					<li><a href="#">Inicio</a></li>
-					<li><a href="#">Servicios</a>
-					 <ul>
-					    	<li><a href="#" target="">Jugar</a></li>
-					    	<li><a href="E:\interfas de compra/index.html" type="submit">Comprar</a></li>
-					    </ul>
-					</li>
-                    <li><a href="#Todos los juegos">Productos</a></li>
-                    <li><a href="#">Contactanos</a></li>
-				</ul>
-				<div id="whatsapp">
-					<a href="+51917443250" target="_blank">
-						<a href="https://web.whatsapp.com/send/?phone=917443250&text=🤑👾Hola%20,Necesito%20saber%20los
- %20mejores%20precios%20para%20comprar%20mi%20juego%20favorito😁"><img src="img/whatsapp.png"></a>	
-				    </a>
-				</div>
-			</nav>
-		</div>
-		<div class="header-content container">
-			<div class="header-txt">
-				<h1>Compra tu <span>Juego</span> <br>Favorito aqui</h1>
-				<p>los mejores juegos podras encontrar aqui 
-				desde juegos de pc hasta juegos de movil compra y 
-				juega y diviertete con tus amigos para Pc y Movil
-			</p>
-			<div class="butons">
-
-				<a href="E:\texto/index.html" class="btn-1">Informacion</a>
-
-				<a href="https://www.friv.com/?play-juegos" class="btn-1">Juegos Gratuitos</a>
-			</div>	
-			</div>
-		</div>
-
+	<header>
+		<h1>Compra de juegos</h1>
 	</header>
+	<main>
+		<form>
+			<label for="nombre">Nombre:</label>
+			<input type="text" id="nombre" name="nombre" required><br><br>
+			<label for="correo">Correo electrónico:</label>
+			<input type="email" id="correo" name="correo" required><br><br>
+			<label for="juego">Juego:</label>
+			<select id="juego" name="juego">
+				<option value="juego1">Escoge Tu Juego</option>
+				<option value="juego1">Clash Royale</option>
+				<option value="juego2">Free Fire</option>
+				<option value="juego3">Crash Bandicot</option>
+			</select><br><br>
 
-	<section class="popular container">
+			<label for="cantidad">Cantidad:</label>
+			<input type="number" id="cantidad" name="cantidad" min="1" max="10" required><br><br>
+			<label for="tarjeta">Tarjeta de crédito:</label>
+			<input type="text" id="tarjeta" name="tarjeta" required><br><br>
+			<a href="E:\compra_exitosa/index.html" class="btn-2" id="comprar">COMPRAR</a>
 
-		<h2>Juegos populares</h2>
-		<div class="popular-content">
-			<img src="img/g1.jpg">
-			<img src="img/g2.jpg">
-			<img src="img/g3.jpg">
-			<img src="img/g4.jpg">
-			<img src="img/g5.jpg">
-			<img src="img/g6.jpg">
-			<img src="img/g7.jpg">
-		</div>
-	</section>
+			<script type="text/javascript">
+  document.getElementById("comprar").addEventListener("click", function() {
+    var nombre = document.getElementById("nombre").value;
+    var correo = document.getElementById("correo").value;
+    var juego = document.getElementById("juego").value;
+    var cantidad = document.getElementById("cantidad").value;
+    var tarjeta = document.getElementById("tarjeta").value;
 
-	<main class="product container">
-		<h2>Todos los juegos</h2>
-		<div class="product-content">
-
-			<div class="product-1">
-				<img src="img/l1.jpg" alt="">
-				<div class="product-txt">
-					<h3>Halo Reach</h3>
-					<div class="price">
-					<p>videojuego de disparos en primera persona. Los jugadores asumen el papel de Noble 6, un supersoldado en combate contra un grupo alienígena conocida como el Covenant.</p>	
-					<a href= "E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>	
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l2.jpg" alt="">
-				<div class="product-txt">
-					<h3>Free Fire</h3>
-					<div class="price">
-					<p>un juego de acción y aventura de tipo battle royale que se juega únicamente en tercera persona. El juego consiste en que hasta 50 jugadores</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-
-			<div class="product-1">
-				<img src="img/l3.jpg" alt="">
-				<div class="product-txt">
-					<h3>Clash Royale</h3>
-					<div class="price">
-					<p>un juego de cartas en el que puedes ver en tiempo real cómo los personajes de tu baraja, basados en el universo del Clash of Clans, se enfrentan a las tropas de tu rival, a quien tendrás que derrotar</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l4.jpg" alt="">
-				<div class="product-txt">
-					<h3>Juego lorem</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l5.jpg" alt="">
-				<div class="product-txt">
-					<h3>Juego lorem</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l6.jpg" alt="">
-				<div class="product-txt">
-					<h3>Navi</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l7.jpg" alt="">
-				<div class="product-txt">
-					<h3>Crash Bandicot</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l8.jpg" alt="">
-				<div class="product-txt">
-					<h3>Juego lorem</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href= "E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-			<div class="product-1">
-				<img src="img/l9.jpg" alt="">
-				<div class="product-txt">
-					<h3>Juego lorem</h3>
-					<div class="price">
-					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
-					</div>
-				</div>				
-			</div>
-			
-
-		</div>	
-	</main>
-
-    <section class="contact container">
-  <div class="contact-content">
-    <h3>Suscríbete a nuestro blog</h3>
-    <form>
-      <input type="email" placeholder="Escribe tu correo">
-      <input type="submit" class="btn-3" value="Enviar" id="enviar">
-    </form>
-  </div>
-</section>
-
-<!--script para mandar a mi correo -->
-
-<script>
-  document.getElementById("enviar").addEventListener("click", function() {
-    var correo = document.querySelector('input[type="email"]').value;
-    window.location.href = "https://mail.google.com/mail/u/0/?view=cm&fs=1&to=" + correo;
+    if (nombre == "" || correo == "" || juego == "juego1" || cantidad == "" || tarjeta == "") {
+      alert("Por favor, ingrese todos los datos requeridos.");
+      return false;
+    }
   });
 </script>
 
+ 
 
-			</form>
-		</div>
-	</section>
-
-	<footer class="footer container">
-		<div class="link">
-			<a href="#" class="Logo"></a>
-		</div>
-
-		<div class="link">
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Productos</a></li>
-				<li><a href="https://web.whatsapp.com">Contacto</a></li>
-			</ul>
-		</div>
-	</footer>
-
-	<a href="YOUR_FACEBOOK_URL" target="_blank">
-    <img src="https://www.facebook.com/favicon.ico" alt="Facebook" style="height: 20px; width: 20px;">
-</a>
-
-
-    <script>
-        document.addEventListener('click', function () {
-            var miAudio = document.getElementById('miAudio');
-            miAudio.play().then(() => {
-                // La reproducción se inició correctamente
-            }).catch((error) => {
-                console.error('Error al iniciar la reproducción:', error);
-            });
-        });
-    </script>
-
+		</form>
+	</main>
 </body>
 </html>
