--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<h3>Juego lorem</h3>
 					<div class="price">
 					<p>$500</p>	
-					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
+					<a href="interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
 					</div>
 				</div>				
 			</div>
