--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<h3>Juego lorem</h3>
 					<div class="price">
 					<p>$500</p>	
-					<a href="interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
+					<a href="E:\interfas de compra/index.html" target="_self" class="btn-2">Comprar</a>
 					</div>
 				</div>				
 			</div>
@@ -216,8 +216,8 @@
 		</div>
 	</footer>
 
-	<a href="YOUR_FACEBOOK_URL" target="_blank">
-    <img src="https://www.facebook.com/favicon.ico" alt="Facebook" style="height: 20px; width: 20px;">
+	<a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61554262493523" target="_blank">
+    <img src="https://www.facebook.com/favicon.ico" alt="Facebook" style="height: 40px; width: 40px;">
 </a>
 
 
