--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 		</div>
 	</footer>
 
-	<a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61554262493523" target="_blank">
+	<a href="https://www.facebook.com/profile.php?id=61554262493523" target="_blank">
     <img src="https://www.facebook.com/favicon.ico" alt="Facebook" style="height: 40px; width: 40px;">
 </a>
 
